adding wrapping template

--- a/aoc01/templates/index.html
+++ b/aoc01/templates/index.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+
 {% block content %}
     <p>The elf carrying the most calories is carrying {{elf_calories.max}} calories</p>
     <p>The top 3 elves are carrying a total of {{elf_calories.top3}} calories</p>
